Upgrade mocha to latest version 10.2.0 due to detected vulnerability (GHSA-f8q6-p94x-37v3)

--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   ],
   "author": "Bruno Celeste",
   "license": "MIT",
-  "dependencies": {
-    "mocha": "^8.3.2"
-  },
   "scripts": {
     "test": "mocha coconut.test.js"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
